--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>Project List</title>
     <style>
       .container {
+        font-size: 2rem;
         margin: 0 auto;
         text-align: center;
       }
+      /* TODO */
     </style>
   </head>
   <body>
