Replace most filler text with my thoughts
And links back to main index

--- a/An awesome blog/index.html
+++ b/An awesome blog/index.html
@@ -17,20 +17,29 @@
         <!-- ! make sure to write descriptive alt texts -->
         <img
           src="images/window.png"
-          alt="a bright yellow window on a blue wall"
+          alt="A bright yellow window with plants in front, on a blue wall."
         />
         <p>
-          At vero eos et <a href="#">accusam et justo duo</a> dolores et ea
-          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
-          ipsum dolor sit amet.
+          While making this web page I learned how to write
+          <a href="https://moz.com/learn/seo/alt-text"
+            >descriptive and specific alt texts for images</a
+          >
+          It's important for accesibility, for when images won't load and it
+          also helps with SEO.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Netus et
-          malesuada fames ac. <a href="#">Sed cras ornare</a> arcu dui vivamus.
-          Elementum integer enim neque volutpat ac tincidunt vitae semper.
+          I also learned some rules of how margins work. Something I wish I knew
+          earlier was how margins will
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Box_Model/Mastering_margin_collapsing"
+            >merge into one another</a
+          >, causing only the larger margin to be visible. This can even occur
+          with the top margins of a parent element and its first child element.
+          Another interesting thing is that, by default, text has top and bottom
+          margins equal to its font-size.
         </p>
         <!-- ! give the last paragraph a class to remove the bottom margin -->
-        <p class="read-more"><a href="#">Read more...</a></p>
+        <p class="read-more"><a href="../index.html">Read more...</a></p>
       </div>
     </div>
   </body>
