--- a/CSS is a lot of fun/index.html
+++ b/CSS is a lot of fun/index.html
@@ -22,31 +22,39 @@
     </header>
     <section class="section-one">
       <div class="container">
-        <h2>Section One Title.</h2>
+        <h2>Using Fonts</h2>
         <img
           src="./images/boardwalk.png"
-          alt="a greyscale image of a boardwalk"
+          alt="A greyscale photograph of a boardwalk on a foggy day."
         />
         <p class="last-element">
-          Netus et malesuada fames ac. <a href="#">Sed cras ornare arcu</a> dui
-          vivamus. <strong>Elementum integer enim neque</strong> volutpat ac
-          tincidunt vitae semper.
+          For this web page I used Google's
+          <a href="https://fonts.google.com/specimen/Lato">Lato</a> font. I
+          learned that using external fonts is good for consistency as not every
+          device has the same set of fonts.
         </p>
       </div>
     </section>
     <section class="section-two">
       <div class="container">
-        <h2>Section Two Title.</h2>
+        <h2>Centering Content</h2>
         <p>
-          Netus et malesuada fames ac. Sed cras ornare arcu dui vivamus.
-          Elementum integer enim neque volutpat ac tincidunt vitae semper.
+          In the
+          <a href="../An awesome blog/index.html">last web page I made</a>, the
+          content was all placed within a container that was then aligned the
+          sit in the middle of the page. But this time, I wanted to center the
+          content while extending the background of each section to the sides of
+          the page.
         </p>
+
         <p>
-          Lorem <a href="#">ipsum dolor sit amet</a>, consetetur sadipscing
-          elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.
+          To do this, I put the content of section within
+          <strong>its own separate container</strong>, and gave the sections
+          backgrounds. Then I made a class for the containers that limited the
+          width and kept it all centered.
         </p>
-        <a href="#" class="button button-accent">contact us</a>
-        <a href="#" class="button button-light">more info</a>
+        <a href="#" class="button button-accent">hover me</a>
+        <a href="../index.html" class="button button-light">more info</a>
       </div>
     </section>
   </body>
