--- a/Getting a little more fancy/index.html
+++ b/Getting a little more fancy/index.html
@@ -8,54 +8,67 @@
     <div class="container">
       <header>
         <h1>
-          Let's start <span class="heading-accent">getting a little</span> more
-          fancy!
+          Let's start getting a little more fancy!
         </h1>
-        <img src="./images/elephants.jpg" alt="three elephants" />
+        <img
+          src="./images/elephants.jpg"
+          alt="A photograph of three elephants with dry grass in background."
+        />
       </header>
 
       <div class="row">
         <div class="col col-s">
           <h2>
-            Dolor sit
+            Learning Flex
           </h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat
+            Today, I learned about the
+            <a href="https://www.w3schools.com/css/css3_flexbox.asp"
+              >flexbox layout</a
+            >. The content of this web page is fit into two rows with the
+            display property set to flex.
+          </p>
+          <p>
+            Each box of text has two classes. A generic column class, and a
+            specific column class regarding its size.
           </p>
         </div>
         <div class="col col-m">
           <h2>
-            Consectetur adipiscing
+            Layout and Spacing
           </h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            The column size classes are used to get the layout to work like
+            this. Small columns take up a quarter of the row width, medium
+            columns a half, and large columns 3 quarters.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            The width for the size classes are actually slightly smaller than
+            25%, 50% and 75%. This is to allow the columns some room between
+            them. I set the
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS/justify-content"
+              >justify-content</a
+            >
+            property of the rows to space-between in order to create this space.
+          </p>
+          <p>
+            This column is medium sized, taking up twice the width of the
+            individual small columns to the right and left.
           </p>
         </div>
         <div class="col col-s col-dark">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat
+            This column and the one below it are also small columns.
+          </p>
+          <p>
+            These two columns have a third class that style them to be
+            different, changing the background and font colour.
+          </p>
+          <p>The columns on the row below are populated with filler text.</p>
+          <p>
+            You can click <a href="../index.html">here</a> to see some of my
+            other projects.
           </p>
         </div>
       </div>
@@ -63,7 +76,7 @@
       <div class="row">
         <div class="col col-l">
           <h2>
-            Deserunt mollit anim id est laborum
+            Some Filler Text
           </h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
