--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <a href="./Getting a little more fancy/index.html"
         >Getting a little more fancy</a
       >
+      <hr />
+      <a href="./Creating a navigation/index.html">Creating a navigation</a>
     </div>
   </body>
 </html>
