Remove redundant normalize.css files

--- a/Getting a little more fancy/index.html
+++ b/Getting a little more fancy/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" href="normalize.css" />
-    <title>Starting to think responsively</title>
+    <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <title>Starting to think responsively</title>
   </head>
   <body>
     <div class="container">
