--- a/Creating a navigation/index.html
+++ b/Creating a navigation/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" href="normalize.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
