Living the Simple Life

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         >Getting a little more fancy</a
       >
       <hr />
-      <a href="./Creating a navigation/index.html">Creating a navigation</a>
+      <a href="./Starting to think responsively/home.html"
+        >Starting to think responsively</a
+      >
     </div>
   </body>
 </html>
