Set up html and font styling in css

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         >Getting a little more fancy</a
       >
       <hr />
-      <a href="./Starting to think responsively/home.html"
+      <a href="https://dbedggood.github.io/vue-practice"
         >Starting to think responsively</a
       >
+      <hr />
+      <a href="./Web design splash page/index.html">Web design splash page</a>
     </div>
   </body>
 </html>
