--- a/Flexbox Card Component/index.html
+++ b/Flexbox Card Component/index.html
@@ -2,6 +2,10 @@
   <head>
     <link rel="stylesheet" href="../normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Blinker:800|Source+Sans+Pro&display=swap"
+      rel="stylesheet"
+    />
     <title>Flexbox Card Component</title>
   </head>
   <body>
@@ -21,8 +25,12 @@
           </p>
         </div>
         <div class="more">
-          <div class="read-time"><strong>15</strong> minute read</div>
-          <div class="read-more"><button>read more</button></div>
+          <div class="read-time">
+            <span class="number">15</span> minute read
+          </div>
+          <div class="read-more">
+            <button class="read-more-button">read more</button>
+          </div>
         </div>
       </div>
     </div>
