Add link to index page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       >
       <hr />
       <a href="./Web design splash page/index.html">Web design splash page</a>
+      <hr />
+      <a href="./Flexbox Card Component/index.html">Flexbox Card Component</a>
     </div>
   </body>
 </html>
